// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MainTariffTile /> it handle click nothing to change 1`] = `
<div
  className="main-tariff-tile"
  onClick={[Function]}
>
  <div
    className="main-tariff-tile__inner"
  >
    <div
      className="main-tariff-tile__container"
    >
      <div
        className="main-tariff-tile__info"
      >
        <div
          className="main-tariff-tile__description"
        >
          <Header
            as="h2"
            className="main-tariff-tile__description-title"
            color="black"
            margin={false}
          >
            Включайся! Пиши
          </Header>
          <div
            className="main-tariff-tile__badges"
          />
          <div
            className="main-tariff-tile__description-wrap"
          >
            <test-file-stub />
            <div
              className="main-tariff-tile__description-text"
            >
              test
            </div>
          </div>
          <TextLink
            className="main-tariff-tile__description-more"
            color="blue"
            href="/tariffs/vklyuchaysya/pishi.html"
            target="_blank"
            underlineStyle="solid"
            underlineVisibility="hover"
          >
            Подробнее о тарифе
          </TextLink>
        </div>
        <div
          className="main-tariff-tile__params"
        >
          <ul
            className="main-tariff-tile__params-list"
          >
            <li
              className="main-tariff-tile__params-item"
              key="Звонки на все номера России"
            >
              <span
                data-amount="300"
              >
                300
              </span>
               
              минут
            </li>
            <li
              className="main-tariff-tile__params-item"
              key="SMS на номера Домашнего региона"
            >
              <span
                data-amount="300"
              >
                300
              </span>
               
              SMS
            </li>
            <li
              className="main-tariff-tile__params-item"
              key="На любые сервисы"
            >
              <span
                data-amount="4"
              >
                4
              </span>
               
              ГБ
            </li>
          </ul>
        </div>
      </div>
      <div
        className="main-tariff-tile__features"
      >
        <MainTariffTileInternet
          className="main-tariff-tile__internet"
          params={
            Array [
              Object {
                "caption": "на мессенджеры",
                "children": false,
                "footnote": "",
                "is_delim": false,
                "param": "unlim_internet",
                "title": "Безлимитный интернет",
                "unit": "",
                "unitExtra": "",
                "unitValue": "",
                "value": "",
                "valueIcon": "",
                "weight": "400",
              },
            ]
          }
          socialIcons={
            Array [
              Object {
                "code": "vk",
                "svgIcon": <test-file-stub />,
                "title": "Vkontakte",
              },
              Object {
                "code": "instagram",
                "svgIcon": <test-file-stub />,
                "title": "Instagram",
              },
            ]
          }
        />
        <MainTariffTileFree
          className="main-tariff-tile__free"
          key="Антивирус ESET NOD320"
          params={
            Array [
              Object {
                "caption": "Антивирус с функцией «Антивор»",
                "children": false,
                "footnote": "",
                "is_delim": false,
                "param": "eset",
                "svgIcon": <test-file-stub />,
                "title": "ESET NOD32",
                "unit": "",
                "unitExtra": "",
                "unitValue": "",
                "value": "Бесплатно",
                "valueIcon": "",
                "weight": "600",
              },
            ]
          }
          title="Бесплатно"
        />
      </div>
      <div
        className="main-tariff-tile__total"
      >
        <div
          className="main-tariff-tile__total-wrap"
        >
          <div
            className="main-tariff-tile__total-cost"
          >
            299
             
            ₽ в неделю
          </div>
          <div
            className="main-tariff-tile__total-buttons"
          >
            <Button
              className="main-tariff-tile__total-button"
              disabledColor="gray"
              downColor="dark"
              hoverColor="green"
              onClick={[Function]}
              padding={true}
              passiveColor="green"
              showSpinner={false}
              sizeAll="medium"
              type="button"
              width="full"
            >
              Выбрать
            </Button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<MainTariffTile /> it renders MainTariffTile 1`] = `
<div
  className="main-tariff-tile"
  onClick={[Function]}
>
  <div
    className="main-tariff-tile__inner"
  >
    <div
      className="main-tariff-tile__container"
    >
      <div
        className="main-tariff-tile__info"
      >
        <div
          className="main-tariff-tile__description"
        >
          <Header
            as="h2"
            className="main-tariff-tile__description-title"
            color="black"
            margin={false}
          >
            Включайся! Пиши
          </Header>
          <div
            className="main-tariff-tile__badges"
          />
          <div
            className="main-tariff-tile__description-wrap"
          >
            <test-file-stub />
            <div
              className="main-tariff-tile__description-text"
            >
              test
            </div>
          </div>
          <TextLink
            className="main-tariff-tile__description-more"
            color="blue"
            href="/tariffs/vklyuchaysya/pishi.html"
            target="_blank"
            underlineStyle="solid"
            underlineVisibility="hover"
          >
            Подробнее о тарифе
          </TextLink>
        </div>
        <div
          className="main-tariff-tile__params"
        >
          <ul
            className="main-tariff-tile__params-list"
          >
            <li
              className="main-tariff-tile__params-item"
              key="Звонки на все номера России"
            >
              <span
                data-amount="300"
              >
                300
              </span>
               
              минут
            </li>
            <li
              className="main-tariff-tile__params-item"
              key="SMS на номера Домашнего региона"
            >
              <span
                data-amount="300"
              >
                300
              </span>
               
              SMS
            </li>
            <li
              className="main-tariff-tile__params-item"
              key="На любые сервисы"
            >
              <span
                data-amount="4"
              >
                4
              </span>
               
              ГБ
            </li>
          </ul>
        </div>
      </div>
      <div
        className="main-tariff-tile__features"
      >
        <MainTariffTileInternet
          className="main-tariff-tile__internet"
          params={
            Array [
              Object {
                "caption": "на мессенджеры",
                "children": false,
                "footnote": "",
                "is_delim": false,
                "param": "unlim_internet",
                "title": "Безлимитный интернет",
                "unit": "",
                "unitExtra": "",
                "unitValue": "",
                "value": "",
                "valueIcon": "",
                "weight": "400",
              },
            ]
          }
          socialIcons={
            Array [
              Object {
                "code": "vk",
                "svgIcon": <test-file-stub />,
                "title": "Vkontakte",
              },
              Object {
                "code": "instagram",
                "svgIcon": <test-file-stub />,
                "title": "Instagram",
              },
            ]
          }
        />
        <MainTariffTileFree
          className="main-tariff-tile__free"
          key="Антивирус ESET NOD320"
          params={
            Array [
              Object {
                "caption": "Антивирус с функцией «Антивор»",
                "children": false,
                "footnote": "",
                "is_delim": false,
                "param": "eset",
                "svgIcon": <test-file-stub />,
                "title": "ESET NOD32",
                "unit": "",
                "unitExtra": "",
                "unitValue": "",
                "value": "Бесплатно",
                "valueIcon": "",
                "weight": "600",
              },
            ]
          }
          title="Бесплатно"
        />
      </div>
      <div
        className="main-tariff-tile__total"
      >
        <div
          className="main-tariff-tile__total-wrap"
        >
          <div
            className="main-tariff-tile__total-cost"
          >
            299
             
            ₽ в неделю
          </div>
          <div
            className="main-tariff-tile__total-buttons"
          >
            <Button
              className="main-tariff-tile__total-button"
              disabledColor="gray"
              downColor="dark"
              hoverColor="green"
              onClick={[Function]}
              padding={true}
              passiveColor="green"
              showSpinner={false}
              sizeAll="medium"
              type="button"
              width="full"
            >
              Выбрать
            </Button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<MainTariffTile /> it renders recomented 1`] = `
<div
  className="main-tariff-tile main-tariff-tile_recommended"
  onClick={[Function]}
>
  <div
    className="main-tariff-tile__inner"
  >
    <div
      className="main-tariff-tile__recommendation"
    >
      <div
        className="main-tariff-tile__recommendation-text"
      >
        Рекомендуем
      </div>
    </div>
    <div
      className="main-tariff-tile__container"
    >
      <div
        className="main-tariff-tile__info"
      >
        <div
          className="main-tariff-tile__description"
        >
          <Header
            as="h2"
            className="main-tariff-tile__description-title"
            color="black"
            margin={false}
          >
            Включайся! Пиши
          </Header>
          <div
            className="main-tariff-tile__badges"
          />
          <div
            className="main-tariff-tile__description-wrap"
          >
            <test-file-stub />
            <div
              className="main-tariff-tile__description-text"
            >
              test
            </div>
          </div>
          <TextLink
            className="main-tariff-tile__description-more"
            color="blue"
            href="/tariffs/vklyuchaysya/pishi.html"
            target="_blank"
            underlineStyle="solid"
            underlineVisibility="hover"
          >
            Подробнее о тарифе
          </TextLink>
        </div>
        <div
          className="main-tariff-tile__params"
        >
          <ul
            className="main-tariff-tile__params-list"
          >
            <li
              className="main-tariff-tile__params-item"
              key="Звонки на все номера России"
            >
              <span
                data-amount="300"
              >
                300
              </span>
               
              минут
            </li>
            <li
              className="main-tariff-tile__params-item"
              key="SMS на номера Домашнего региона"
            >
              <span
                data-amount="300"
              >
                300
              </span>
               
              SMS
            </li>
            <li
              className="main-tariff-tile__params-item"
              key="На любые сервисы"
            >
              <span
                data-amount="4"
              >
                4
              </span>
               
              ГБ
            </li>
          </ul>
        </div>
      </div>
      <div
        className="main-tariff-tile__features"
      >
        <MainTariffTileInternet
          className="main-tariff-tile__internet"
          params={
            Array [
              Object {
                "caption": "на мессенджеры",
                "children": false,
                "footnote": "",
                "is_delim": false,
                "param": "unlim_internet",
                "title": "Безлимитный интернет",
                "unit": "",
                "unitExtra": "",
                "unitValue": "",
                "value": "",
                "valueIcon": "",
                "weight": "400",
              },
            ]
          }
          socialIcons={
            Array [
              Object {
                "code": "vk",
                "svgIcon": <test-file-stub />,
                "title": "Vkontakte",
              },
              Object {
                "code": "instagram",
                "svgIcon": <test-file-stub />,
                "title": "Instagram",
              },
            ]
          }
        />
        <MainTariffTileFree
          className="main-tariff-tile__free"
          key="Антивирус ESET NOD320"
          params={
            Array [
              Object {
                "caption": "Антивирус с функцией «Антивор»",
                "children": false,
                "footnote": "",
                "is_delim": false,
                "param": "eset",
                "svgIcon": <test-file-stub />,
                "title": "ESET NOD32",
                "unit": "",
                "unitExtra": "",
                "unitValue": "",
                "value": "Бесплатно",
                "valueIcon": "",
                "weight": "600",
              },
            ]
          }
          title="Бесплатно"
        />
      </div>
      <div
        className="main-tariff-tile__total"
      >
        <div
          className="main-tariff-tile__total-wrap"
        >
          <div
            className="main-tariff-tile__total-cost"
          >
            299
             
            ₽ в неделю
          </div>
          <div
            className="main-tariff-tile__total-buttons"
          >
            <Button
              className="main-tariff-tile__total-button"
              disabledColor="gray"
              downColor="dark"
              hoverColor="green"
              onClick={[Function]}
              padding={true}
              passiveColor="green"
              showSpinner={false}
              sizeAll="medium"
              type="button"
              width="full"
            >
              Выбрать
            </Button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<MainTariffTile /> it renders witho badges 1`] = `
<div
  className="main-tariff-tile"
  onClick={[Function]}
>
  <div
    className="main-tariff-tile__inner"
  >
    <div
      className="main-tariff-tile__container"
    >
      <div
        className="main-tariff-tile__info"
      >
        <div
          className="main-tariff-tile__description"
        >
          <Header
            as="h2"
            className="main-tariff-tile__description-title"
            color="black"
            margin={false}
          >
            Включайся! Пиши
          </Header>
          <div
            className="main-tariff-tile__badges"
          >
            <div
              className="main-tariff-tile__badge main-tariff-tile__badge_type_badge"
              key="badge0"
            >
              <BubbleHint
                placement="right"
                popupAlign="left"
                popupPadding="normal"
                popupWidth="small"
                trigger={
                  <div
                    className="main-tariff-tile__badge-title"
                  >
                    badge
                  </div>
                }
              >
                <div
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "badge",
                    }
                  }
                />
              </BubbleHint>
            </div>
            <div
              className="main-tariff-tile__badge main-tariff-tile__badge_type_badge"
              key="badge1"
            >
              <div
                className="main-tariff-tile__badge-title"
              >
                badge
              </div>
            </div>
          </div>
          <div
            className="main-tariff-tile__description-wrap"
          >
            <test-file-stub />
            <div
              className="main-tariff-tile__description-text"
            >
              test
            </div>
          </div>
          <TextLink
            className="main-tariff-tile__description-more"
            color="blue"
            href="/tariffs/vklyuchaysya/pishi.html"
            target="_blank"
            underlineStyle="solid"
            underlineVisibility="hover"
          >
            Подробнее о тарифе
          </TextLink>
        </div>
        <div
          className="main-tariff-tile__params"
        >
          <ul
            className="main-tariff-tile__params-list"
          >
            <li
              className="main-tariff-tile__params-item"
              key="Звонки на все номера России"
            >
              <span
                data-amount="300"
              >
                300
              </span>
               
              минут
            </li>
            <li
              className="main-tariff-tile__params-item"
              key="SMS на номера Домашнего региона"
            >
              <span
                data-amount="300"
              >
                300
              </span>
               
              SMS
            </li>
            <li
              className="main-tariff-tile__params-item"
              key="На любые сервисы"
            >
              <span
                data-amount="4"
              >
                4
              </span>
               
              ГБ
            </li>
          </ul>
        </div>
      </div>
      <div
        className="main-tariff-tile__features"
      >
        <MainTariffTileInternet
          className="main-tariff-tile__internet"
          params={
            Array [
              Object {
                "caption": "на мессенджеры",
                "children": false,
                "footnote": "",
                "is_delim": false,
                "param": "unlim_internet",
                "title": "Безлимитный интернет",
                "unit": "",
                "unitExtra": "",
                "unitValue": "",
                "value": "",
                "valueIcon": "",
                "weight": "400",
              },
            ]
          }
          socialIcons={
            Array [
              Object {
                "code": "vk",
                "svgIcon": <test-file-stub />,
                "title": "Vkontakte",
              },
              Object {
                "code": "instagram",
                "svgIcon": <test-file-stub />,
                "title": "Instagram",
              },
            ]
          }
        />
        <MainTariffTileFree
          className="main-tariff-tile__free"
          key="Антивирус ESET NOD320"
          params={
            Array [
              Object {
                "caption": "Антивирус с функцией «Антивор»",
                "children": false,
                "footnote": "",
                "is_delim": false,
                "param": "eset",
                "svgIcon": <test-file-stub />,
                "title": "ESET NOD32",
                "unit": "",
                "unitExtra": "",
                "unitValue": "",
                "value": "Бесплатно",
                "valueIcon": "",
                "weight": "600",
              },
            ]
          }
          title="Бесплатно"
        />
      </div>
      <div
        className="main-tariff-tile__total"
      >
        <div
          className="main-tariff-tile__total-wrap"
        >
          <div
            className="main-tariff-tile__total-cost"
          >
            299
             
            ₽ в неделю
          </div>
          <div
            className="main-tariff-tile__total-buttons"
          >
            <Button
              className="main-tariff-tile__total-button"
              disabledColor="gray"
              downColor="dark"
              hoverColor="green"
              onClick={[Function]}
              padding={true}
              passiveColor="green"
              showSpinner={false}
              sizeAll="medium"
              type="button"
              width="full"
            >
              Выбрать
            </Button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
